ID-133 Fix beacon search result detail width on mobile

--- a/angular/src/app/discovery/beacon/beacon-search.component.scss
+++ b/angular/src/app/discovery/beacon/beacon-search.component.scss
@@ -80,6 +80,12 @@ ddap-beacon-search-result-table {
       width: 100%;
     }
   }
+
+  mat-drawer {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 0;
+  }
 }
 
 @media only screen and (min-width: 768px) {
